Fix styling issue causing pause button to appear when video stopped on mobile devices

--- a/frontend/sass/components/_card.scss
+++ b/frontend/sass/components/_card.scss
@@ -408,7 +408,7 @@
 		}
 
 		& .card__content:hover :is(.card__pause) {
-			opacity: 0;
+			opacity: 0 !important;
 			// visibility: hidden;
 		}
 
